--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # PostgreSQL config
-quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=asistappuser
-quarkus.datasource.password=1234
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/asistappdb
+quarkus.datasource.db-kind=${DB_SOURCE:postgresql}
+quarkus.datasource.username=${DB_USER:asleep2049}
+quarkus.datasource.password=${DB_PASSWORD:zHxMoogZm5F4ZaL0hp7A9SD7a0FVBCcw}
+quarkus.datasource.jdbc.url=${DB_URL:jdbc:postgresql://dpg-d1o4el49c44c73citj10-a.oregon-postgres.render.com/asistappdb}
 
 # Hibernate
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.database.generation=${DB_GENERATION:update}
 quarkus.hibernate-orm.log.sql=true
 quarkus.log.category."org.hibernate.SQL".level=DEBUG
 
